# eersa-data-plataform

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: sources.yml
notebooks/: 01_exploracion_bronze.ipynb  nb_bronze_generacion_eersa.ipynb  nb_gold_generacion_eersa.ipynb  nb_silver_generacion_eersa.ipynb
src/extractors/: eersa_generacion_extractor.py
