[project]
name = "eersa-data-platform"
version = "0.1.0"
description = "Pipeline Medallion para datos de generación EERSA 2021"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
